--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --build",
+    "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
     "clean": "tsc --build --clean",
     "start": "NODE_ENV=production node dist/main.js"
   },
@@ -12,6 +13,10 @@
   "license": "MIT",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^8.4.0",
     "typescript": "^4.5.5"
   }
 }
