--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "user service of the label.bkict.org project",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --build",
+    "generate": "./scripts/protoc.sh",
+    "build": "npm run generate && tsc --build",
     "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
-    "clean": "tsc --build --clean",
+    "clean": "rm -r ./src/proto/gen && tsc --build --clean",
     "start": "NODE_ENV=production node dist/main.js"
   },
   "author": "tranhieu23.code@outlook.com",
@@ -17,6 +18,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.4.0",
+    "ts-protoc-gen": "^0.15.0",
     "typescript": "^4.5.5"
   }
 }
