--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "user service of the label.bkict.org project",
   "main": "index.js",
   "scripts": {
-    "generate": "./scripts/protoc.sh",
+    "generate": "./node_modules/.bin/proto-loader-gen-types --longs=Number --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto/gen src/proto/**/*.proto",
     "build": "npm run generate && tsc --build",
     "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
     "clean": "rm -r ./src/proto/gen && tsc --build --clean",
@@ -20,5 +20,9 @@
     "eslint-config-prettier": "^8.4.0",
     "ts-protoc-gen": "^0.15.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@grpc/grpc-js": "^1.5.5",
+    "@grpc/proto-loader": "^0.6.9"
   }
 }
