--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
+# User Service settings
 USER_SERVICE_PORT=20000
+# Postgress settings
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=label_bkict_db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=admin
