--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "user service of the label.bkict.org project",
   "main": "index.js",
   "scripts": {
+    "api-knex": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' knex --knexfile=./knexfile.ts",
     "generate": "./node_modules/.bin/proto-loader-gen-types --longs=Number --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto/gen src/proto/**/*.proto",
     "build": "npm run generate && tsc --build",
     "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
@@ -18,6 +19,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.4.0",
+    "ts-node": "^10.5.0",
     "ts-protoc-gen": "^0.15.0",
     "typescript": "^4.5.5"
   },
@@ -25,6 +27,8 @@
     "@grpc/grpc-js": "^1.5.5",
     "@grpc/proto-loader": "^0.6.9",
     "brandi": "^4.0.1",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "knex": "^1.0.3",
+    "pg": "^8.7.3"
   }
 }
