--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
@@ -27,6 +28,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.5.5",
     "@grpc/proto-loader": "^0.6.9",
+    "bcrypt": "^5.0.1",
     "brandi": "^4.0.1",
     "dotenv": "^16.0.0",
     "knex": "^1.0.3",
