--- a/package.json
+++ b/package.json
@@ -5,22 +5,32 @@
   "main": "index.js",
   "scripts": {
     "api-knex": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' knex --knexfile=./knexfile.ts",
-    "generate": "./node_modules/.bin/proto-loader-gen-types --longs=Number --enums=Number --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto/gen src/proto/**/*.proto",
     "build": "npm run generate && tsc --build",
-    "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
     "clean": "rm -r ./src/proto/gen && tsc --build --clean",
-    "start": "node dist/main.js"
+    "debug": "npm run build && npm run watch-debug",
+    "generate": "./node_modules/.bin/proto-loader-gen-types --longs=Number --enums=Number --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto/gen src/proto/**/*.proto",
+    "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
+    "serve-debug": "nodemon --inspect dist/main.js",
+    "serve": "node dist/main.js",
+    "start": "node dist/main.js --prod",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "watch-node": "nodemon dist/main.js",
+    "watch-ts": "tsc -w",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "author": "tranhieu23.code@outlook.com",
   "license": "MIT",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/concurrently": "^7.0.0",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "concurrently": "^7.0.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.4.0",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
     "ts-protoc-gen": "^0.15.0",
     "typescript": "^4.5.5"
