--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/concurrently": "^7.0.0",
+    "@types/ms": "^0.7.31",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
@@ -44,6 +45,7 @@
     "dotenv": "^16.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
+    "ms": "^2.1.3",
     "nodejs-snowflake": "^2.0.0",
     "pg": "^8.7.3",
     "validator": "^13.7.0",
