fix issue with hot reload

--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
     "api-knex": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' knex --knexfile=./knexfile.ts",
     "build": "npm run generate && tsc --build",
     "clean": "rm -r ./src/proto/gen && tsc --build --clean",
-    "debug": "npm run build && npm run watch-debug",
+    "debug": "npm run build && npm run watch",
     "generate": "./node_modules/.bin/proto-loader-gen-types --longs=Number --enums=Number --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto/gen src/proto/**/*.proto",
     "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
-    "serve-debug": "nodemon --inspect dist/main.js",
     "serve": "node dist/main.js",
     "start": "node dist/main.js --prod",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "watch-node": "nodemon dist/main.js",
+    "watch-node": "nodemon --ignore \"logs/**\" --delay 1s --inspect dist/main.js",
     "watch-ts": "tsc -w",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
   },
