implement initialization cronjob

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
 # User Service settings
 USER_SERVICE_PORT=20000
+USER_SERVICE_FIRST_USER_DISPLAY_NAME="Trần Minh Hiếu"
+USER_SERVICE_FIRST_USER_USERNAME="hieutm"
+USER_SERVICE_FIRST_USER_PASSWORD="admin123"
+USER_SERVICE_FIRST_USER_ROLE_DISPLAY_NAME="Admin"
+USER_SERVICE_FIRST_USER_ROLE_DESCRIPTION="The Administrator of the system"
+USER_SERVICE_FIRST_USER_PERMISSION_PERMISSION_NAME_LIST=users.manage,user_roles.manage,user_permissions.manage
 # Postgress settings
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
