--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "api-knex": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' knex --knexfile=./knexfile.ts",
     "build": "npm run generate && tsc --build",
     "clean": "rm -r ./src/proto/gen && tsc --build --clean",
-    "debug": "npm run build && npm run watch",
+    "debug-grpc": "npm run build && npm run watch-grpc",
     "generate": "./node_modules/.bin/proto-loader-gen-types --longs=Number --enums=Number --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto/gen src/proto/**/*.proto",
     "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
     "serve": "node dist/main.js",
-    "start": "node dist/main.js --prod",
+    "serve-initialize": "node dist/main.js --initialize",
+    "serve-grpc": "node dist/main.js --start_grpc_server",
+    "start-initialize": "node dist/main.js --prod --initialize",
+    "start-grpc": "node dist/main.js --prod --start_grpc_server",
     "watch-node": "nodemon --ignore \"logs/**\" --delay 1s --inspect dist/main.js",
     "watch-ts": "tsc -w",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
+    "watch-grpc": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node -- --start_grpc_server\""
   },
   "author": "tranhieu23.code@outlook.com",
   "license": "MIT",
@@ -22,6 +25,7 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/concurrently": "^7.0.0",
+    "@types/minimist": "^1.2.2",
     "@types/ms": "^0.7.31",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -43,6 +47,7 @@
     "dotenv": "^16.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
+    "minimist": "^1.2.6",
     "ms": "^2.1.3",
     "nodejs-snowflake": "^2.0.0",
     "pg": "^8.7.3",
