create cron job

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "generate": "./node_modules/.bin/proto-loader-gen-types --longs=Number --enums=Number --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto/gen src/proto/**/*.proto",
     "lint": "npx eslint ./src --ext .js,.jsx,.ts,.tsx",
     "serve": "node dist/main.js",
-    "serve-initialize": "node dist/main.js --initialize",
-    "serve-grpc": "node dist/main.js --start_grpc_server",
+    "serve-initialize": "ts-node src/main.ts --initialize",
+    "serve-grpc": "ts-node src/main.ts --start_grpc_server",
     "start-initialize": "node dist/main.js --prod --initialize",
     "start-grpc": "node dist/main.js --prod --start_grpc_server",
     "watch-node": "nodemon --ignore \"logs/**\" --delay 1s --inspect dist/main.js",
@@ -25,6 +25,7 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/concurrently": "^7.0.0",
+    "@types/cron": "^2.0.0",
     "@types/minimist": "^1.2.2",
     "@types/ms": "^0.7.31",
     "@types/validator": "^13.7.1",
@@ -44,6 +45,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
     "brandi": "^4.0.1",
+    "cron": "^2.0.0",
     "dotenv": "^16.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
