--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/concurrently": "^7.0.0",
+    "@types/cron": "^2.0.0",
     "@types/minimist": "^1.2.2",
     "@types/ms": "^0.7.31",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "concurrently": "^7.0.0",
+    "cron": "^2.0.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.4.0",
     "nodemon": "^2.0.15",
