--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "knex": "^2.4.2",
     "minimist": "^1.2.6",
     "ms": "^2.1.3",
+    "node-cache": "^5.1.2",
     "nodejs-snowflake": "^2.0.0",
     "pg": "^8.7.3",
     "validator": "^13.7.0",
