--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^8.4.0",
     "@grpc/grpc-js": "^1.5.5",
     "@grpc/proto-loader": "^0.6.9",
     "@types/jsonwebtoken": "^8.5.8",
@@ -54,7 +53,6 @@
     "pg": "^8.7.3",
     "validator": "^13.7.0",
     "winston": "^3.6.0",
-    "winston-daily-rotate-file": "^4.6.1",
-    "winston-elasticsearch": "^0.17.1"
+    "winston-daily-rotate-file": "^4.6.1"
   }
 }
